--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -872,7 +872,7 @@
             "or": "oder",
             "title": "Ein Dokument hochladen",
             "upload_button": "Ein Dokument hochladen",
-            "max_files": "Max. {{ count }} Dateien"
+            "max_files": "*maximal {{ count }} Dateien"
         },
         "info_box": {
             "2fa_description": "Weitere Informationen über 2FA finden Sie bei uns:",
@@ -2348,11 +2348,8 @@
             "sort": "Sortieren",
             "payment_option_qr": "QR-Code beim Anbieter anzeigen",
             "payment_option_reservation": "Online buchen",
-            "payment_options": "Zahlungsmöglichkeiten",
-            "payment_options_info": "Lesen Sie mehr über Zahlungsmöglichkeiten",
             "price": "Preis (€)",
             "price_from": "Von",
-            "price_to": "An",
             "payment_option_extra_payment": "Online-Bezahlung mit iDeal",
             "price_type_option_discount_fixed": "Rabatt in Euro",
             "price_type_option_discount_percentage": "Rabatt in Prozent",
@@ -2361,7 +2358,10 @@
             "price_type_option_regular": "Preis",
             "price_type_options": "Art des Angebots",
             "price_type_options_info": "Lesen Sie mehr über die Arten von Angeboten",
-            "category": "Kategorien"
+            "category": "Kategorien",
+            "payment_options": "Zahlungsmöglichkeiten",
+            "payment_options_info": "Lesen Sie mehr über Zahlungsmöglichkeiten",
+            "price_to": "An"
         },
         "sort": {
             "created_at_asc": "Älteste zuerst",
@@ -2390,7 +2390,6 @@
             "notifications": "Benachrichtigungen",
             "payouts": "Auszahlungen",
             "profile": "Daten",
-            "records": "Persönliche Daten",
             "reimbursements": "Kostendeckung",
             "reservations": "Reservierungen",
             "security": "Sicherheit",
@@ -2728,7 +2727,8 @@
                 "rejection_note": "Nachricht des Anbieters:"
             },
             "loading": "Laden",
-            "title": "Details zur Buchung"
+            "title": "Details zur Buchung",
+            "reservation_fields_title": "Daten"
         },
         "expired": "Ihre Reservierung wurde leider während des Bestellvorgangs storniert, da das ausgewählte Produkt ausverkauft ist.",
         "extra_amount_refund": {
@@ -2764,7 +2764,14 @@
                 "pending": "Im Vorgriff",
                 "rejected": "Verweigert",
                 "waiting": "Warten auf die Zahlung"
-            }
+            },
+            "address": "Adresse",
+            "birth_date": "Datum der Geburt",
+            "email": "E-Mail Adresse",
+            "first_name": "Vornamen",
+            "last_name": "Nachname",
+            "phone": "Rufnummer",
+            "user_note": "Hinweis"
         },
         "title": "Details zur Aufstockung",
         "expiring": "Bitte beachten Sie, dass Sie nur noch <strong>{{expiresIn}} Minuten</strong> Zeit haben, um die zusätzliche Zahlung zu leisten. Andernfalls wird die Reservierung automatisch storniert."
@@ -3647,5 +3654,12 @@
     "block_product_categories": {
         "description": "Klicken Sie auf ein Thema und Sie sehen sofort, aus welchem Angebot Sie wählen können.",
         "title": "Was machen Sie gerne?"
+    },
+    "modal_image_preview": {
+        "alt_text": "Beispiel einer Datei",
+        "buttons": {
+            "close": "Schließen Sie"
+        },
+        "title": "Datei anzeigen"
     }
 }
