--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -179,7 +179,7 @@
             "or": "أو",
             "title": "تحميل مستند",
             "upload_button": "تحميل مستند",
-            "max_files": "الحد الأقصى {{ count }} الملفات"
+            "max_files": "*ماكس {{ count }} الملفات"
         },
         "info_box": {
             "2fa_description": "لمزيد من المعلومات حول المصادقة الثنائية (2FA)، تفضل بزيارتنا:",
@@ -422,11 +422,8 @@
             "sort": "فرز",
             "payment_option_qr": "إظهار رمز الاستجابة السريعة لدى المزود",
             "payment_option_reservation": "احجز عبر الإنترنت",
-            "payment_options": "خيارات الدفع",
-            "payment_options_info": "اقرأ المزيد عن خيارات الدفع",
             "price": "السعر (€)",
             "price_from": "من",
-            "price_to": "إلى",
             "payment_option_extra_payment": "الدفع عبر الإنترنت باستخدام iDeal",
             "price_type_option_discount_fixed": "الخصم باليورو",
             "price_type_option_discount_percentage": "الخصم بالنسبة المئوية",
@@ -435,7 +432,10 @@
             "price_type_option_regular": "السعر",
             "price_type_options": "نوع العرض",
             "price_type_options_info": "اقرأ المزيد عن أنواع العروض",
-            "category": "الفئات"
+            "category": "الفئات",
+            "payment_options": "خيارات الدفع",
+            "payment_options_info": "اقرأ المزيد عن خيارات الدفع",
+            "price_to": "إلى"
         },
         "sort": {
             "created_at_asc": "الأقدم أولاً",
@@ -2667,7 +2667,8 @@
                 "rejection_note": "رسالة الموفر:"
             },
             "loading": "التحميل",
-            "title": "تفاصيل الحجز"
+            "title": "تفاصيل الحجز",
+            "reservation_fields_title": "البيانات"
         },
         "expired": "عذرًا، تم إلغاء حجزك أثناء عملية الدفع لأن المنتج المحدد تم بيعه بالكامل.",
         "extra_amount_refund": {
@@ -2703,7 +2704,14 @@
                 "pending": "في انتظار",
                 "rejected": "مرفوض",
                 "waiting": "في انتظار الدفع"
-            }
+            },
+            "address": "العنوان",
+            "birth_date": "تاريخ الميلاد",
+            "email": "عنوان البريد الإلكتروني",
+            "first_name": "الاسم الأول",
+            "last_name": "اللقب",
+            "phone": "رقم الهاتف",
+            "user_note": "ملاحظة"
         },
         "title": "تفاصيل التعبئة",
         "expiring": "يُرجى ملاحظة أن هناك <strong>{{expiresIn}} دقيقة</strong> متبقية لتسديد الدفعة الإضافية. وإلا سيتم إلغاء الحجز تلقائياً."
@@ -3416,7 +3424,6 @@
             "notifications": "الإشعارات",
             "payouts": "المدفوعات",
             "profile": "البيانات",
-            "records": "البيانات الشخصية",
             "reimbursements": "استرداد التكاليف",
             "reservations": "الحجوزات",
             "security": "الأمن",
@@ -3647,5 +3654,12 @@
     "block_product_categories": {
         "description": "انقر على سمة وسترى على الفور العرض الذي يمكنك الاختيار من بينها.",
         "title": "ماذا تحب أن تفعل؟"
+    },
+    "modal_image_preview": {
+        "alt_text": "مثال على الملف",
+        "buttons": {
+            "close": "إغلاق"
+        },
+        "title": "عرض الملف"
     }
 }
