--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -459,11 +459,8 @@
             "sort": "Sort",
             "payment_option_qr": "Show QR code at the provider",
             "payment_option_reservation": "Online booking",
-            "payment_options": "Payment options",
-            "payment_options_info": "Learn more about payment options",
             "price": "Price (€)",
             "price_from": "From",
-            "price_to": "To",
             "payment_option_extra_payment": "Online additional payment with iDeal",
             "price_type_option_discount_fixed": "Discount in euro",
             "price_type_option_discount_percentage": "Discount in percent",
@@ -472,7 +469,10 @@
             "price_type_option_regular": "Price",
             "price_type_options": "Type of offer",
             "price_type_options_info": "Read more about the types of offerings",
-            "category": "Categories"
+            "category": "Categories",
+            "payment_options": "Payment options",
+            "payment_options_info": "Learn more about payment options",
+            "price_to": "To"
         },
         "sort": {
             "created_at_asc": "Oldest first",
@@ -2734,7 +2734,6 @@
             "notifications": "Notifications",
             "payouts": "Payouts",
             "profile": "Data",
-            "records": "Personal data",
             "reimbursements": "Cost recovery",
             "reservations": "Reservations",
             "security": "Security",
@@ -2774,7 +2773,14 @@
                 "waiting": "Waiting for payment",
                 "canceled_by_sponsor": "Cancelled by sponsor"
             },
-            "pay_extra": "Continue to pay"
+            "pay_extra": "Continue to pay",
+            "address": "Address",
+            "birth_date": "Date of birth",
+            "email": "Email address",
+            "first_name": "First name",
+            "last_name": "Surname",
+            "phone": "Phone number",
+            "user_note": "Note"
         },
         "details": {
             "labels": {
@@ -2788,7 +2794,8 @@
                 "rejection_note": "Provider Notice:"
             },
             "loading": "Loading",
-            "title": "Reservation details"
+            "title": "Reservation details",
+            "reservation_fields_title": "Data"
         },
         "expired": "Sorry, your reservation was canceled during the checkout process because the selected product is sold out.",
         "extra_amount_refund": {
@@ -3032,7 +3039,7 @@
             "or": "or",
             "title": "Upload a document",
             "upload_button": "Upload a document",
-            "max_files": "Max. {{ count }} files"
+            "max_files": "*max {{ count }} files"
         },
         "info_box": {
             "2fa_description": "For more information on 2FA, check us out:",
@@ -3647,5 +3654,12 @@
     "block_product_categories": {
         "description": "Click on a theme and you'll immediately see what offerings you can choose from.",
         "title": "What do you think would be fun to do?"
+    },
+    "modal_image_preview": {
+        "alt_text": "Example of file",
+        "buttons": {
+            "close": "Close"
+        },
+        "title": "View file"
     }
 }
